# music2phone

./: .gitignore  README.md  beets_info.py  config.py  core.py  main.py  mount_folder_picker.py  pyproject.toml  requirements.txt
