[project]
name = "music2phone"
version = "0.1.0"
description = "Sync music from your computer to your phone using your Beets database and any mount method (KDE Connect, MTP, etc.)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=7.0.0",
    "textual>=0.5.3",
    "textual-fspicker>=0.0.11",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

